@@ -1,3 +1,9 @@
+2019-11-07  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92405
+	* tree-vect-loop.c (vectorizable_reduction): Appropriately
+	restrict lane-reducing ops to single stmt chains.
+
 2019-11-07  Martin Jambor  <mjambor@suse.cz>
 
 	PR lto/70929
